<resources>
    <string name="app_name">CoOpApplication</string>
    <string name="wellcome_to_coop">Welcome to CoOp</string>
    <string name="sign_up">Sign Up</string>
    <string name="student_sign_up">Student Sign up</string>

    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="address">Address</string>
    <string name="gender">Gender</string>
    <string name="job_category">Job Category 1</string>
    <string name="student_id">Student Id</string>
    <string name="university_name"> Name</string>
    <string name="about_student">Sort Description about yourself </string>
    <string name="submit_btn">Submit</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up_as">Sign Up As</string>
    <string name="employer">Employer</string>
    <string name="university">University</string>
    <string name="student">Student</string>
    <string name="university_address"> Address</string>
    <string name="university_email_address">University Email Address</string>
    <string name="university_website_link"> Website link</string>
    <string name="contract_person_email">Contract person Email</string>
    <string name="contract_person_phone">Contract Person Phone</string>
    <string name="contract_person_name">Contract Person Name</string>
    <string name="company_name">Company Name</string>
    <string name="company_website_link">Company Website Link</string>
    <string name="business_type">Business Type</string>
    <string name="thank_u_text">Thank You !</string>
    <string name="signup_welcome_details">We will communicate with you very soon
        through the email for further process.</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_sign_in">Sign in</string>
    <string name="email_address">Email Address</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="new_password">Enter New password</string>
    <string name="confarm_password">Re-Enter Password</string>
    <string name="phone_no">Mobile Number</string>
    <string name="date_of_birth">Select Date</string>
    <string name="title_activity_admin_home">AdminHomeActivity</string>
    <string name="action_settings">Settings</string>
    <string name="company">Company</string>

    <string name="welcome_to_admin_university">Approve List Item</string>
    <string name="approve_list_items">Approve list item</string>
    <string name="ali_description">Description</string>
    <string name="button_to_approve">Approve</string>
    <string name="button_to_delete">Delete</string>
    <string name="test_button">Test Company Login</string>
    <string name="title_activity_add_edit_university">AddEditUniversityActivity</string>
    <string name="title_activity_add_edit_company_type">AddEditCompanyBusiTypeActivity</string>
    <string name="contract_person_id">Contract Id</string>


    <!-- log in instructions and warnings -->
    <string name="hint_name">Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="text_login">Login</string>
    <string name="text_not_member">No account yet? Create one</string>
    <string name="text_already_member">Already a member? Login</string>
    <string name="error_email_exists">Email Already Exists</string>
    <string name="error_password_match">Password Does Not Matches</string>
    <string name="error_valid_email_password">Wrong Email or Password</string>
    <string name="text_hello">Hello,</string>
    <string name="error_message_email">Enter Valid Email</string>
    <string name="title_activity_dash_board">DashBoardActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="add_business_type">Add Business Type</string>
    <string name="university_name_2">University Name</string>
    <string name="company_cover_photo">Upload Cover Photo</string>
    <string name="hired_employ">Employee Hired 150 Taka</string>
    <string name="total_hour_service">Total 1 hour service</string>
    <string name="icon_company_type">Company type icon</string>
    <string name="ctypelist_item_name">Company Type Name</string>
    <string name="available_emp">Available Empolyee Count</string>
    <string name="use_camara">Take picture by camera</string>
    <string name="use_galary">Select image from galery</string>
    <string name="companyTypeHolderName">Company Type</string>
    <string name="saveButton">Save</string>
    <string name="upload">Upload</string>
    <string name="btn_upload">Upload</string>
    <string name="btn_details">Details</string>
    <string name="total_employee">Total Employee : 10</string>
    <string name="title_activity_employer_home">EmployerHomeActivity</string>
    <string name="title_activity_employee_list">EmployeeListActivity</string>
    <string name="student_name">Student Name</string>
    <string name="hire">Hire</string>
    <string name="wish_list">Wish List</string>
    <string name="student_image_holder">Student Image</string>
    <string name="title_activity_student_details">StudentDetailsActivity</string>
    <string name="Dynamic_DatePicker">Dynamic DatePicker</string>

</resources>
