<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/signupas_linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#5EAC32"
        android:gravity="top|center"
        android:orientation="vertical"
        android:scrollbars="horizontal"
        tools:context="daffodil.international.ac.coopapplication.SignUpAsActivity">

        <TextView
            android:id="@+id/sign_up_as_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="170sp"
            android:background="#5EAC32"
            android:text="@string/sign_up_as"
            android:textColor="#ffffff"
            android:textSize="30sp" />

        <Button
            android:id="@+id/sign_up_as_employer_button"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="25sp"
            android:background="#09776E"
            android:text="@string/employer"
            android:textAlignment="center"
            android:textColor="#ffff"
            android:textSize="20sp" />

        <Button
            android:id="@+id/sign_up_as_university_button"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:background="#09776E"
            android:text="@string/university"
            android:textAlignment="center"
            android:textColor="#ffff"
            android:textSize="20sp" />

        <Button
            android:id="@+id/sign_up_as_student_button"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:background="#09776E"
            android:onClick="goToStudentSignUpPage"
            android:text="@string/student"
            android:textAlignment="center"
            android:textColor="#ffff"
            android:textSize="20sp" />

    </LinearLayout>

</ScrollView>